// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should generate foo gitlab project env: base 1`] = `
Object {
  "CI_COMMIT_BEFORE_SHA": "0000000000000000000000000000000000000000",
  "CI_COMMIT_DESCRIPTION": "",
  "CI_COMMIT_MESSAGE": "chore(release): version 1.2.3",
  "CI_COMMIT_REF_PROTECTED": "false",
  "CI_COMMIT_SHA": "0123456789abcdefghijklmnopqrstuvwxyz0123",
  "CI_COMMIT_SHORT_SHA": "0123456",
  "CI_COMMIT_TIMESTAMP": "1111-11-11T11:11:11+00:00",
  "CI_COMMIT_TITLE": "chore(release): version 1.2.3",
  "CI_ENVIRONMENT_URL": "https://sample.fabrique.social.gouv.fr",
  "CI_PROJECT_DIR": "/builds/SocialGouv/sample",
  "CI_PROJECT_ID": "85",
  "CI_PROJECT_NAME": "sample",
  "CI_PROJECT_NAMESPACE": "SocialGouv",
  "CI_PROJECT_PATH": "SocialGouv/sample",
  "CI_PROJECT_PATH_SLUG": "socialgouv-sample",
  "CI_PROJECT_ROOT_NAMESPACE": "SocialGouv",
  "CI_PROJECT_TITLE": "sample",
  "CI_PROJECT_URL": "https://gitlab.factory.social.gouv.fr/SocialGouv/sample",
  "CI_PROJECT_VISIBILITY": "public",
  "CI_REGISTRY_IMAGE": "registry.gitlab.factory.social.gouv.fr/socialgouv/sample",
  "CI_REGISTRY_USER": "gitlab-ci-token",
  "CI_REPOSITORY_URL": "https://gitlab-ci-token:[MASKED]@gitlab.factory.social.gouv.fr/SocialGouv/sample.git",
}
`;

exports[`should generate foo gitlab project env: dev 1`] = `
Object {
  "CI_COMMIT_BEFORE_SHA": "0000000000000000000000000000000000000000",
  "CI_COMMIT_DESCRIPTION": "",
  "CI_COMMIT_MESSAGE": "chore(release): version 1.2.3",
  "CI_COMMIT_REF_NAME": "master",
  "CI_COMMIT_REF_PROTECTED": "false",
  "CI_COMMIT_REF_SLUG": "master",
  "CI_COMMIT_SHA": "0123456789abcdefghijklmnopqrstuvwxyz0123",
  "CI_COMMIT_SHORT_SHA": "0123456",
  "CI_COMMIT_TAG": "",
  "CI_COMMIT_TIMESTAMP": "1111-11-11T11:11:11+00:00",
  "CI_COMMIT_TITLE": "chore(release): version 1.2.3",
  "CI_ENVIRONMENT_NAME": "master-dev42",
  "CI_ENVIRONMENT_SLUG": "master-dev42",
  "CI_ENVIRONMENT_URL": "https://master-dev42-sample.dev42.fabrique.social.gouv.fr",
  "CI_PROJECT_DIR": "/builds/SocialGouv/sample",
  "CI_PROJECT_ID": "85",
  "CI_PROJECT_NAME": "sample",
  "CI_PROJECT_NAMESPACE": "SocialGouv",
  "CI_PROJECT_PATH": "SocialGouv/sample",
  "CI_PROJECT_PATH_SLUG": "socialgouv-sample",
  "CI_PROJECT_ROOT_NAMESPACE": "SocialGouv",
  "CI_PROJECT_TITLE": "sample",
  "CI_PROJECT_URL": "https://gitlab.factory.social.gouv.fr/SocialGouv/sample",
  "CI_PROJECT_VISIBILITY": "public",
  "CI_REGISTRY_IMAGE": "registry.gitlab.factory.social.gouv.fr/socialgouv/sample",
  "CI_REGISTRY_USER": "gitlab-ci-token",
  "CI_REPOSITORY_URL": "https://gitlab-ci-token:[MASKED]@gitlab.factory.social.gouv.fr/SocialGouv/sample.git",
  "KUBE_INGRESS_BASE_DOMAIN": "dev42.fabrique.social.gouv.fr",
  "KUBE_NAMESPACE": "sample-85-master-dev42",
  "PRODUCTION": "",
}
`;

exports[`should generate foo gitlab project env: preprod 1`] = `
Object {
  "CI_COMMIT_BEFORE_SHA": "0000000000000000000000000000000000000000",
  "CI_COMMIT_DESCRIPTION": "",
  "CI_COMMIT_MESSAGE": "chore(release): version 1.2.3",
  "CI_COMMIT_REF_NAME": "v1.2.3",
  "CI_COMMIT_REF_PROTECTED": "false",
  "CI_COMMIT_REF_SLUG": "v1-2-3",
  "CI_COMMIT_SHA": "0123456789abcdefghijklmnopqrstuvwxyz0123",
  "CI_COMMIT_SHORT_SHA": "0123456",
  "CI_COMMIT_TAG": "v1.2.3",
  "CI_COMMIT_TIMESTAMP": "1111-11-11T11:11:11+00:00",
  "CI_COMMIT_TITLE": "chore(release): version 1.2.3",
  "CI_ENVIRONMENT_NAME": "preprod-dev42",
  "CI_ENVIRONMENT_SLUG": "preprod-dev42",
  "CI_ENVIRONMENT_URL": "https://preprod-sample.dev42.fabrique.social.gouv.fr",
  "CI_PROJECT_DIR": "/builds/SocialGouv/sample",
  "CI_PROJECT_ID": "85",
  "CI_PROJECT_NAME": "sample",
  "CI_PROJECT_NAMESPACE": "SocialGouv",
  "CI_PROJECT_PATH": "SocialGouv/sample",
  "CI_PROJECT_PATH_SLUG": "socialgouv-sample",
  "CI_PROJECT_ROOT_NAMESPACE": "SocialGouv",
  "CI_PROJECT_TITLE": "sample",
  "CI_PROJECT_URL": "https://gitlab.factory.social.gouv.fr/SocialGouv/sample",
  "CI_PROJECT_VISIBILITY": "public",
  "CI_REGISTRY_IMAGE": "registry.gitlab.factory.social.gouv.fr/socialgouv/sample",
  "CI_REGISTRY_USER": "gitlab-ci-token",
  "CI_REPOSITORY_URL": "https://gitlab-ci-token:[MASKED]@gitlab.factory.social.gouv.fr/SocialGouv/sample.git",
  "KUBE_INGRESS_BASE_DOMAIN": "dev42.fabrique.social.gouv.fr",
  "KUBE_NAMESPACE": "sample-85-preprod-dev42",
  "PRODUCTION": "",
}
`;

exports[`should generate foo gitlab project env: prod 1`] = `
Object {
  "CI_COMMIT_BEFORE_SHA": "0000000000000000000000000000000000000000",
  "CI_COMMIT_DESCRIPTION": "",
  "CI_COMMIT_MESSAGE": "chore(release): version 1.2.3",
  "CI_COMMIT_REF_NAME": "v1.2.3",
  "CI_COMMIT_REF_PROTECTED": "false",
  "CI_COMMIT_REF_SLUG": "v1-2-3",
  "CI_COMMIT_SHA": "0123456789abcdefghijklmnopqrstuvwxyz0123",
  "CI_COMMIT_SHORT_SHA": "0123456",
  "CI_COMMIT_TAG": "v1.2.3",
  "CI_COMMIT_TIMESTAMP": "1111-11-11T11:11:11+00:00",
  "CI_COMMIT_TITLE": "chore(release): version 1.2.3",
  "CI_ENVIRONMENT_NAME": "prod2",
  "CI_ENVIRONMENT_SLUG": "prod2",
  "CI_ENVIRONMENT_URL": "https://sample.fabrique.social.gouv.fr",
  "CI_PROJECT_DIR": "/builds/SocialGouv/sample",
  "CI_PROJECT_ID": "85",
  "CI_PROJECT_NAME": "sample",
  "CI_PROJECT_NAMESPACE": "SocialGouv",
  "CI_PROJECT_PATH": "SocialGouv/sample",
  "CI_PROJECT_PATH_SLUG": "socialgouv-sample",
  "CI_PROJECT_ROOT_NAMESPACE": "SocialGouv",
  "CI_PROJECT_TITLE": "sample",
  "CI_PROJECT_URL": "https://gitlab.factory.social.gouv.fr/SocialGouv/sample",
  "CI_PROJECT_VISIBILITY": "public",
  "CI_REGISTRY_IMAGE": "registry.gitlab.factory.social.gouv.fr/socialgouv/sample",
  "CI_REGISTRY_USER": "gitlab-ci-token",
  "CI_REPOSITORY_URL": "https://gitlab-ci-token:[MASKED]@gitlab.factory.social.gouv.fr/SocialGouv/sample.git",
  "KUBE_INGRESS_BASE_DOMAIN": "fabrique.social.gouv.fr",
  "KUBE_NAMESPACE": "sample",
  "PRODUCTION": "true",
}
`;
